# DataStructures

./: .gitmodules
C++/: .gitignore  CMakeLists.txt  Makefile
C++/DinerPhilosopher/: CMakeLists.txt
C++/DinerPhilosopher/include/: diner_philosopher.hpp
C++/DinerPhilosopher/tests/: diner_philosopher_test.cpp
C++/HuffmanCompression/: CMakeLists.txt
C++/HuffmanCompression/include/: huffman.hpp
C++/HuffmanCompression/tests/: huffman_test.cpp
C++/Latch/: CMakeLists.txt
C++/Latch/include/: latch.hpp
C++/Latch/tests/: latch_test.cpp
C++/MakeUnique/: CMakeLists.txt
C++/MakeUnique/include/: make_unique.hpp
C++/MakeUnique/tests/: make_unique_test.cpp
C++/OrderBook/: CMakeLists.txt
C++/OrderBook/include/: order_book.hpp
C++/OrderBook/tests/: order_book_test.cpp
C++/ParallelAccumulate/: CMakeLists.txt
C++/ParallelAccumulate/include/: parallel_accumulate.hpp
C++/ParallelAccumulate/tests/: parallel_accumulate_test.cpp
C++/ThreadPool/: CMakeLists.txt
C++/ThreadPool/include/: thread_pool.hpp
C++/ThreadPool/tests/: thread_pool_test.cpp
C++/ThreadSafeQueue/: CMakeLists.txt  follow-up-questions.md
C++/ThreadSafeQueue/additional_theory/: new_syntax.md
C++/ThreadSafeQueue/include/: thread_safe_queue.hpp
C++/ThreadSafeQueue/tests/: thread_safe_queue_test.cpp
C++/Vector/: CMakeLists.txt
C++/Vector/include/: vector.hpp
C++/Vector/tests/: vector_test.cpp
C++/uniquePtr/: CMakeLists.txt
C++/uniquePtr/include/: unique_ptr.hpp
C++/uniquePtr/tests/: unique_ptr_test.cpp
